Split script into different modules
Add files __main__.py, text_utils.py, ui_utils.py.
Remove script.py.
Update Dockerfile.

--- a/lr_1/Dockerfile
+++ b/lr_1/Dockerfile
@@ -2,6 +2,6 @@ FROM alpine:3.11
 
 WORKDIR /app
 RUN apk add python3
-ADD script.py ./
+ADD simple_python_script ./
 
-ENTRYPOINT [ "python3", "/app/script.py" ]
+ENTRYPOINT [ "python3", "/app" ]
