Update GitHub Actions workflow
Fix tox.

--- a/lr_2/tox.ini
+++ b/lr_2/tox.ini
@@ -12,6 +12,11 @@ addopts = "--cov=myserializer"
 testpaths = 
     tests
 
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39 flake8 mypy
+
 [testenv:flake8]
 basepython = python3.9
 deps = flake8 == 4.0.1
