--- a/.github/workflows/lr_2_tests.yml
+++ b/.github/workflows/lr_2_tests.yml
@@ -28,7 +28,7 @@ jobs:
       working-directory: ./lr_2
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r dev-requirements.txt
+        python -m pip install tox tox-gh-actions
     - name: Test with tox
       working-directory: ./lr_2
       run: tox
