--- a/lr_2/tox.ini
+++ b/lr_2/tox.ini
@@ -15,7 +15,7 @@ testpaths =
 [gh-actions]
 python =
     3.8: py38
-    3.9: py39 flake8 mypy
+    3.9: py39, flake8, mypy
 
 [testenv:flake8]
 basepython = python3.9
